[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph_dynamodb_checkpoint"
version = "0.2.3"
description = "DynamoDB checkpoint saver implementation for LangGraph - Single table, auto create with delete handling"
authors = [{name = "Kamal", email = "skamalj@github.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-core",
    "langgraph",
    "boto3",
    "botocore"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy"
]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_dynamodb_checkpoint"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[project.urls]
Homepage = "https://github.com/skamalj/langgraph_dynamodb_checkpoint"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/skamalj/langgraph_dynamodb_checkpoint.git"
Issues = "https://github.com/skamalj/langgraph_dynamodb_checkpoint/issues"
Changelog = "https://github.com/skamalj/langgraph_dynamodb_checkpoint/blob/main/CHANGELOG.md"